bk_ida/gccida/c1/combine_simplify_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4059:35: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  combine_simplify_rtx( rtx x, machine_mode op0_mode, int last, int in_dest) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4072:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4072:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4077:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v20; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4084:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4085:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4086:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4086:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4087:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v30; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4089:4: error: expected ';' after expression
rtx v32; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4089:5: error: use of undeclared identifier 'v32'
rtx v32; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4090:4: error: expected ';' after expression
rtx v33; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4090:5: error: use of undeclared identifier 'v33'
rtx v33; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4093:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v36; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4095:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4095:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4109:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v52; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4115:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/combine.c:4120:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v63; // r14d 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_simplify_rtx/src/obj/combine.o] Error 1
